--- a/main_hub/templates/main_hub/createPost.html
+++ b/main_hub/templates/main_hub/createPost.html
@@ -1,5 +1,35 @@
 {% extends 'main_hub/base.html' %}
 
+{% block scripts %}
+{% endblock %}
+
+{% block header %}
+    <header>
+        <input type="button" id="colorToggle" name="colorToggle">
+        <label for="colorToggle" id="toggleLabel"><span><i class="fa-solid fa-sun"></i></span></label>
+        <h1><a href=" {% url 'main_hub:index' %}">Funko HUB</a></h1>
+        <nav>
+            <button id="menu_button" for="nav_btn">
+                <div class="bar1 bar"></div>
+                <div class="bar2 bar"></div>
+                <div class="bar3 bar"></div>
+            </button>
+            
+                
+            </input>
+            <ul id="nav_ul">
+                {% if user.is_authenticated %}
+                    <li><a href="{% url 'main_hub:create_post'%}">CREATE POST</a></li>
+                    <li><a href="{% url 'chat' %}">CHAT </a></li> 
+                    <li><a href="{% url 'users:logout' %}">LOG OUT</a></li>
+                    
+                {% endif %}
+            </ul>
+        </nav>
+        
+    </header>
+    {% endblock %}
+
 {% block content %}
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
@@ -15,4 +45,6 @@
         
         
 {% endblock content %}
+
+
 
