--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -1,7 +1,37 @@
 {% extends 'main_hub/base.html'%}
 
+{% block scripts %}
+{% endblock %}
+
+{% block header %}
+    <header>
+        <input type="button" id="colorToggle" name="colorToggle">
+        <label for="colorToggle" id="toggleLabel"><span><i class="fa-solid fa-sun"></i></span></label>
+        <h1><a href=" {% url 'main_hub:index' %}">Funko HUB</a></h1>
+        <nav>
+            <button id="menu_button" for="nav_btn">
+                <div class="bar1 bar"></div>
+                <div class="bar2 bar"></div>
+                <div class="bar3 bar"></div>
+            </button>
+            
+                
+            </input>
+            <ul id="nav_ul">
+                {% if user.is_authenticated %}
+                    <li><a href="{% url 'main_hub:create_post'%}">CREATE POST</a></li>
+                    <li><a href="{% url 'chat' %}">CHAT </a></li> 
+                    <li><a href="{% url 'users:logout' %}">LOG OUT</a></li>
+                    
+                {% endif %}
+            </ul>
+        </nav>
+        
+    </header>
+    {% endblock %}
+
 {% block content %}
-<div id="login_container">
+<section id="login_container">
     <h2>Login</h2>
     <form method="post" action="{% url 'users:login' %}">
         {% csrf_token %}
@@ -10,6 +40,13 @@
         <button name="submit">Log in</button>
         <input type="hidden" name="next" value="{% url 'main_hub:index' %}">
     </form>
-</div>
+</section>
 
 {% endblock %}
+
+{% comment %} {% block footer%}
+    <footer id="footer">
+        <p>For Educational Purposes Only</p>
+        <p>Copyright &copy; Senior Project</p>
+    </footer>
+{% endblock %}  {% endcomment %}
