--- a/main_hub/templates/main_hub/delete_post.html
+++ b/main_hub/templates/main_hub/delete_post.html
@@ -4,13 +4,13 @@
 {% endblock %}
 
 {% block content %}
-
-{{ post.title }}
-<h3>Are you sure you want to delete this post?</h3>
-<form action="" method="post">
+<section id="deleteSect">
+<h3>Are you sure you want to delete this post? - {{ post.title }}</h3>
+<form action="" method="post" id="delete_form">
     {% csrf_token %}
     <input type="submit" value="Delete">
 </form>
+</section>
 
 
 {% endblock %}
