added text in footer

--- a/main_hub/templates/main_hub/base.html
+++ b/main_hub/templates/main_hub/base.html
@@ -67,8 +67,8 @@
 
 {% block footer%}
     <footer>
-        <p>For Educational Purposes Only</p>
-        <p>Copyright &copy; Funko HUB</p>
+        <p>Not for actual Use - For Educational Purposes Only</p>
+        <p>Copyright &copy; Senior Proj</p>
     </footer>
 {% endblock %}
 </html>
